# Marmoset

./: .gitattributes  .gitignore  Marmoset.sln  MarmosetInfo.cs  README.md
Components/: DirectionPadAttributes.cs  DirectionPadComponent.cs  DirectionPadKeyboardFilter.cs  SnakeComponent.cs  TetrisComponent.cs
Games/Snake/: Direction.cs  FoodSpawner.cs  GridPoint.cs  SnakeBody.cs  SnakeGame.cs
Games/Tetris/: TetrisBoard.cs  TetrisGame.cs  TetrisMove.cs  TetrisPiece.cs  TetrominoType.cs
docs/: DESIGN.md  PROTOCOL.md
python/marmoset-rl/: README.md  pyproject.toml
python/marmoset-rl/marmoset_rl/: __init__.py  client.py  env.py
python/marmoset-rl/tests/: mock_server.py  test_client.py  test_env.py
samples/: TestSnake.gh
samples/python/: export_onnx.py  train_snake.py
src/Marmoset.Core/: Marmoset.Core.csproj
src/Marmoset.Core/Agents/: ActionBuffer.cs  ActionSpec.cs  Agent.cs  ObservationSpec.cs  VectorSensor.cs
src/Marmoset.Core/Inference/: OnnxPolicy.cs
src/Marmoset.Core/Runtime/: StepResult.cs  TrainingSession.cs
src/Marmoset.Core/Server/: TrainingServer.cs
src/Marmoset.GH/: Marmoset.GH.csproj
src/Marmoset.GH/Components/: DirectionPadComponent.cs  DirectionPadKeyboardFilter.cs  SnakeComponent.cs
src/Marmoset.GH/Properties/: launchSettings.json
src/Marmoset.Games/: Marmoset.Games.csproj
src/Marmoset.Games/Common/: Direction.cs  GridPoint.cs
src/Marmoset.Games/Snake/: SnakeAgent.cs  (+1 more)
tests/Marmoset.Core.Tests/: FakeAgent.cs  Marmoset.Core.Tests.csproj  OnnxModelFactory.cs  OnnxPolicyTests.cs  TrainingServerTests.cs  TrainingSessionTests.cs
(+11 files in other folders)
