[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "marmoset-rl"
version = "0.1.0"
description = "Gymnasium-compatible Python client for Marmoset, the Rhino/Grasshopper reinforcement learning framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }  # LICENSE file to be added before public release
authors = [{ name = "Marmoset contributors" }]
keywords = ["reinforcement-learning", "gymnasium", "rhino", "grasshopper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=0.29",
    "msgpack>=1.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
train = [
    "stable-baselines3>=2.0",
    "torch>=2.0",
    "onnx>=1.14",
]

[tool.setuptools.packages.find]
include = ["marmoset_rl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
